# props

./: CMakeLists.txt  README.md
cmake/: propsConfig.cmake.in
include/daball/: props.hpp
include/daball/props/base/: ObservableProperty.hpp  Property.hpp
include/daball/props/behaviors/base/: AdditionProxy.hpp  ArrowProxy.hpp  AssignmentProxy.hpp  CoercionProxy.hpp  DivisionProxy.hpp  EqualityProxy.hpp  Gettable.hpp  GreaterThanOrEqualityProxy.hpp  GreaterThanProxy.hpp  IObservable.hpp  IStreamRightShiftAdapter.hpp  InequalityProxy.hpp  LesserThanOrEqualityProxy.hpp  LesserThanProxy.hpp  LogicalNotProxy.hpp  ModuloProxy.hpp  MultiplicationProxy.hpp  NegationProxy.hpp  OStreamLeftShiftAdapter.hpp  Observable.hpp  PointerProxy.hpp  PromotionProxy.hpp  Settable.hpp  SubjectOwner.hpp  SubjectReferrer.hpp  SubtractionProxy.hpp
include/daball/props/behaviors/base/interfaces/: IAdditionAssignmentProxy.hpp  IAdditionProxy.hpp  IArrowProxy.hpp  IAssignmentProxy.hpp  ICoercionProxy.hpp  IDivisionAssignmentProxy.hpp  IDivisionProxy.hpp  IEqualityProxy.hpp  IGettable.hpp  IGreaterThanOrEqualityProxy.hpp  IGreaterThanProxy.hpp  IInequalityProxy.hpp  ILesserThanOrEqualityProxy.hpp  ILesserThanProxy.hpp  ILogicalNotProxy.hpp  IModuloAssignmentProxy.hpp  IModuloProxy.hpp  IMultiplicationAssignmentProxy.hpp  IMultiplicationProxy.hpp  INegationProxy.hpp  IPointerProxy.hpp  IPromotionProxy.hpp  ISettable.hpp  ISubtractionAssignmentProxy.hpp  ISubtractionProxy.hpp
include/daball/props/behaviors/boost/: BoostObservable.hpp
include/daball/props/boost/: Boost2SignalsObservableProperty.hpp
include/daball/props/signals/base/: SignalConnection.hpp  SignalEmitter.hpp  SlotHandler.hpp
include/daball/props/signals/boost/: BoostSignals2SignalConnection.hpp  BoostSignals2SignalEmitter.hpp  BoostSignals2SlotHandler.hpp
include/daball/props/strategies/: boost_strategy.hpp
tests/: CMakeLists.txt
tests/src/: ExamplePropertyCOut.cpp  TestBehavioralInterfaces.cpp  TestBoostComputedProperty.cpp  TestBoostObservable.cpp  TestBoostObservableObject.cpp  TestBoostObservableProperty.cpp  TestBoostSignalEmitter.cpp
tests/src/mocks/: AdditionProxyTestClass.hpp  ArrowProxyTestClass.hpp  AssignmentProxyTestClass.hpp  CoercionProxyTestClass.hpp  CombinatorialProxyTestClass.hpp  DivisionProxyTestClass.hpp  EqualityProxyTestClass.hpp  GettableTestClass.hpp  GreaterThanOrEqualityProxyTestClass.hpp  GreaterThanProxyTestClass.hpp  InequalityProxyTestClass.hpp  LesserThanOrEqualityProxyTestClass.hpp  LesserThanProxyTestClass.hpp  LogicalNotProxyTestClass.hpp  ModuloProxyTestClass.hpp  MultiplicationProxyTestClass.hpp  NegationProxyTestClass.hpp  PointerProxyTestClass.hpp  PromotionProxyTestClass.hpp  SettableTestClass.hpp  SubtractionProxyTestClass.hpp
